# fun-etl

./: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  supervisord.conf
src/airflow/: airflow.cfg  unittests.cfg
src/airflow/dags/test/: test.py
