[tool.poetry]
name = "fun-etl"
version = "0.1.0"
description = ""
authors = ["Kenta <kentasuzuki5555@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
apache-airflow = "2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
